--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"displayName": "Arc Language Support",
 	"description": "Highlight and formatter for Arc Readable Configiration",
 	"publisher": "aster",
-	"version": "0.1.0",
-	"icon": "icon.png",
+	"version": "0.1.1",
+	"icon": "logo.png",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/GalAster/vscode-arc.git"
