--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	],
 	"scripts": {
 		"postinstall": "node ./node_modules/vscode/bin/install && tsc",
-		"build": "yarn lint && ts-node extension/build.ts",
+		"build": "yarn lint && ts-node syntax/build.ts",
 		"pack": "yarn build && vsce package",
 		"lint": "tslint **/*.ts --fix"
 	},
@@ -47,14 +47,12 @@
 		]
 	},
 	"devDependencies": {
-		"@types/node": "^11.13.6"
+		"@types/node": "^11.13.6",
+		"vscode": "^1.1.33"
 	},
 	"__metadata": {
 		"id": "6267dad2-7d52-462a-a1ef-7e3da7378a7d",
 		"publisherDisplayName": "Aster",
 		"publisherId": "3406b78c-f287-4619-8d82-7c97998693e3"
-	},
-	"dependencies": {
-		"vscode": "^1.1.33"
 	}
 }
