--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,10 @@ trim_trailing_whitespace = true
 indent_style = space
 indent_size = 2
 
+[*.json]
+indent_style = tab
+indent_size = 4
+
 [*.arc]
 indent_style = tab
 tab_width = 2
