--- a/.editorconfig
+++ b/.editorconfig
@@ -6,10 +6,18 @@ tab_width = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{arc,toml}]
+[*.arc]
+indent_style = space
+indent_size = 2
+
+[*.yaml-tmlLanguage]
 indent_style = space
 indent_size = 2
 
 [*.json]
+indent_style = tab
+indent_size = 4
+
+[*.toml]
 indent_style = tab
 indent_size = 4
